fixed flickering on Offer.tsx

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -300,3 +300,22 @@ html {
   max-height: 90vh;
   object-fit: contain;
 }
+
+/**/
+
+@media (prefers-reduced-motion: no-preference){
+  #test{
+    opacity: 0;
+    /* scale: 0.8; */
+    animation: fade-in linear forwards;
+    animation-timeline: view(20%);
+    animation-range: 100px 36%;
+  }
+
+  @keyframes fade-in {
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+}
